refactor: formatting, RuntimeException in ChatService, unnamed catch param, indentation and record style
Made-with: Cursor